--- a/.github/workflows/build-lede.yml
+++ b/.github/workflows/build-lede.yml
@@ -99,6 +99,7 @@ jobs:
           sudo apt-get update
           sudo apt-get -y install gcc-multilib gettext libncurses5-dev
           sudo apt-get clean
+          sudo apt install libfuse-dev
           pip3 install -r extra-files/requirements-transit.txt
 
       - name: 读取配置
